fix issues on the rubberband that is not clearly visible

--- a/Cloudy-Dark-Blue/gtk-3.0/gtk.css
+++ b/Cloudy-Dark-Blue/gtk-3.0/gtk.css
@@ -57,8 +57,8 @@ textview border {
 
 rubberband, flowbox rubberband, treeview.view rubberband, .content-view rubberband,
 .rubberband {
-  border: 1px solid #171a24;
-  background-color: rgba(23, 26, 36, 0.2); }
+  border: 1px solid #292f40;
+  background-color: rgba(41, 47, 64, 0.4); }
 
 flowbox flowboxchild {
   padding: 3px;
