--- a/Cloudy-Dark-Grey/gtk-3.0/gtk.css
+++ b/Cloudy-Dark-Grey/gtk-3.0/gtk.css
@@ -111,8 +111,8 @@ textview border {
 
 rubberband, flowbox rubberband, treeview.view rubberband, .content-view rubberband,
 .rubberband {
-  border: 1px solid #1e1e1e;
-  background-color: rgba(30, 30, 30, 0.2); }
+  border: 1px solid #343434;
+  background-color: rgba(52, 52, 52, 0.4); }
 
 flowbox flowboxchild {
   padding: 3px;
